<resources>
    <string name="app_name">Team Builder</string>
    <!-- Types de sports -->
    <string-array name="sports">
        <item>Football</item>
        <item>Tennis</item>
        <item>Equitation</item>
        <item>Judo</item>
        <item>Basket-ball</item>
        <item>Handball</item>
        <item>Rugby</item>
        <item>Golf</item>
        <item>Voile</item>
        <item>Natation</item>
        <item>Athletisme</item>
        <item>Volleyball</item>
    </string-array>

    <string-array name="noPoste">
        <item></item>
    </string-array>

    <!-- Types d'utilisateurs -->
    <string-array name="userType">
        <item>Club</item>
        <item>Sportif</item>
    </string-array>

    <!-- Type de poste football-->
    <string-array name="posteFootball">
        <item>Attaquant</item>
        <item>Defenseur</item>
        <item>Gardien</item>
        <item>Milieu</item>
        <item>Libéro</item>
    </string-array>

    <!-- Type de poste basket-->
    <string-array name="posteBasket">
        <item>Arrière</item>
        <item>Ailier</item>
        <item>Ailier fort</item>
        <item>Pivot</item>
        <item>Meneur</item>
    </string-array>

    <!-- Type de poste handball-->
    <string-array name="posteHandball">
        <item>Ailier gauche</item>
        <item>Arrière gauche</item>
        <item>Gardien</item>
        <item>Pivot</item>
        <item>Demi-centre</item>
        <item>Arrière droit</item>
        <item>Ailier droit</item>
    </string-array>

    <!-- Type de poste rugby-->
    <string-array name="posteRugby">
        <item>Première ligne</item>
        <item>Deuxième ligne</item>
        <item>Troisième ligne</item>
        <item>Demi de mêlée</item>
        <item>Demi d\'ouverture</item>
        <item>Trois-quarts centre</item>
        <item>Trois-quarts aile</item>
        <item>Arrière</item>
    </string-array>

    <!-- Type de pratiques ahtlétisme-->
    <string-array name="posteAthletisme">
        <item>Course à pieds</item>
        <item>Sauts</item>
        <item>Lancers</item>
        <item>Épreuves combinées</item>
        <item>Marche athlétique</item>
    </string-array>

    <!-- Type de poste volley-->
    <string-array name="posteVolley">
        <item>Central</item>
        <item>Passeur</item>
        <item>Réceptionneur-Attaquant</item>
        <item>Pointu</item>
        <item>Libéro</item>
    </string-array>

    <!-- Type de niveau -->
    <string-array name="niveau">
        <item>Departementale</item>
        <item>Regionale</item>
        <item>Nationale</item>
    </string-array>

    <!-- Type de Sexe -->
    <string-array name="sexes">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>

    <!-- Sportif  -->
    <string name="recherche_offre">Recherche d\'offre</string>
    <string name="video_demonstrative">Ajouter une video demonstrative</string>
    <string name="age">Age</string>
    <string name="profil_picture">Photo de profil</string>
    <string name="update_success">Mise à jour du profil effectuée</string>
    <string name="update_faile">Un probleme est survenu pendant la mise à jour du profil</string>

    <!-- Club -->
    <string name="teamName">Nom d\'équipe</string>
    <string name="addTeam">Ajouter une équipe</string>
    <string name="rechercheActive">Recherche active</string>
    <string name="addTeamResult">Ajouter une année à votre historique</string>
    <string name="clubName">Nom du club</string>
    <string name="year">Année</string>
    <string name="level">Niveau</string>
    <string name="rank">Classement</string>

    <!-- Generic -->
    <string name="valider">Valider</string>
    <string name="accepter">Accepter</string>
    <string name="refuser">Refuser</string>

    <!-- Sign in -->
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Mot de passe</string>
    <string name="sign_in_connexion">Connexion</string>
    <string name="sign_in_incorrect_input">Attention vous devez saisir un email et un mot de passe</string>
    <string name="sign_in_success_sign_in">Connexion réussie</string>

    <!-- Sign Up -->
    <string name="sign_up_inscription">Inscription</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_nom">Nom</string>
    <string name="sign_up_prenom">Prenom</string>
    <string name="sign_up_password">Mot de passe</string>
    <string name="sign_up_confirm_password">Confirmer votre mot de passe</string>
    <string name="sign_up_user_type">Je suis</string>
    <string name="sign_up_success">"Inscription réussie</string>
    <string name="sign_up_incorrect_input">Attention tous vos champs ne sont pas valides</string>

    <!-- HomeScreen  -->
    <string name="home_screen_club">Club</string>
    <string name="home_screen_sportif">Sportif</string>
    <string name="home_screen_connected_as">Vous etes connecté en tant que %1$s</string>
    <string name="home_screen_empty_research">Aucun élément trouvé...</string>

</resources>