<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/connectedAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="connected as"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/sportifDetail"
        android:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardElevation="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedAs">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/homeScreenCurrentProfilDisplayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_profil"
                    android:background="@drawable/round_blue_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeScreenCurrentProfilDisplayed">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:materialIcon="face" />

                <TextView
                    android:id="@+id/textviewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bob" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sportSpinner"
                    app:layout_constraintEnd_toStartOf="@+id/sportSpinner"
                    app:layout_constraintTop_toTopOf="@+id/sportSpinner"
                    app:materialIcon="cake_variant" />

                <TextView
                    android:id="@+id/textviewAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22 ans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sportSpinner"
                    app:layout_constraintEnd_toStartOf="@+id/sportSpinner"
                    app:layout_constraintTop_toTopOf="@+id/sportSpinner"
                    app:materialIcon="human_male" />

                <TextView
                    android:id="@+id/textviewTaille"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="178cm" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sportSpinner"
                    app:layout_constraintEnd_toStartOf="@+id/sportSpinner"
                    app:layout_constraintTop_toTopOf="@+id/sportSpinner"
                    app:materialIcon="pin" />

                <TextView
                    android:id="@+id/textviewPoste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="attaquant" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sportSpinner"
                    app:layout_constraintEnd_toStartOf="@+id/sportSpinner"
                    app:layout_constraintTop_toTopOf="@+id/sportSpinner"
                    app:materialIcon="target" />

                <TextView
                    android:id="@+id/textviewRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="France" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/equipeDetail"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardElevation="20dp"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedAs">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutClubName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/textviewEquipeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginTop="20dp"
                    android:text="Equipe" />
            </LinearLayout>


            <ImageView
                android:id="@+id/homeScreenCurrentClubProfilDisplayed"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/round_blue_button"
                android:src="@drawable/ic_profil"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutClubName" />


            <LinearLayout
                android:id="@+id/linearLayoutEquipFondation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeScreenCurrentClubProfilDisplayed">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:materialIcon="calendar" />

                <TextView
                    android:id="@+id/textviewClubDateFondation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="date fondation" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutClubPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutEquipFondation">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:materialIcon="phone" />

                <TextView
                    android:id="@+id/textviewEquipePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0650675642" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutClubSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutClubPhone">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:materialIcon="tennis" />

                <TextView
                    android:id="@+id/textviewEquipeSports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tennis, foot" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_research"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedAs">

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/materialIconView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:materialIcon="alert_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/home_screen_empty_research"
            app:layout_constraintBottom_toBottomOf="@+id/materialIconView5"
            app:layout_constraintStart_toEndOf="@+id/materialIconView5"
            app:layout_constraintTop_toTopOf="@+id/materialIconView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRefuse"
            style="@style/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/button_red"
            android:text="@string/refuser" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAccept"
            style="@style/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/button_green"
            android:text="@string/accepter"
            app:layout_constraintStart_toEndOf="@+id/materialButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>